syntax = "proto3";

package bank.v1;

service BankService {
  rpc MakeTransaction(MakeTransactionRequest) returns (MakeTransactionResponse) {}
  rpc Balance(BalanceRequest) returns (BalanceResponse) {}
}

message MakeTransactionRequest {
  int32 sender_id = 1;
  int32 receiver_id = 2;
  Money money = 3;
}

message MakeTransactionResponse {
  Transaction transaction = 1;
}

message BalanceRequest {
  int32 user_id = 1;
}

message BalanceResponse {
  repeated Money balances = 1;
}

message Transaction {
  string id = 1;
  int32 sender_id = 2;
  int32 receiver_id = 3;
  Money money = 4;
}

message Money {
  int32 units = 1;
  int32 nanos = 2;
  string currency = 3;
}
